# flashgen

./: .gitignore  6pqc0mkkepdi9ranaqarffmpsocrr5ik.darc  README.md  chatgpt_prompt.md  flashgen.py  issues.jsonl  manifest  pyproject.toml  requirements.txt
.beads/: config.yaml  issues.jsonl  metadata.json
docs/: IMPLEMENTATION_PLAN.md  SYSTEM_DESIGN.md
src/flashgen_mcp/: __init__.py  app.py
tests/: test_furigana_normalization.py  test_health.py  test_tts_configuration.py
